removed some stuff